Feat: Hostile weapon retrieval, display smoothing, and fake player packet test tools
- Add RetrieveWeaponGoal/State: mobs pathfind to lodged thrown weapons and pick them up
- Wire MobThrowAbility lodged-item tracking into Hostile and HostileStateMachine
- Add DISPLAY_TELEPORT_DURATION config for smoother display entity interpolation
- Expand FakePlayerManager with full packet API (move, teleport, rotate, animate, velocity, flags)
- Add FakeAnimation enum, FakePlayerPacketTester harness, and PacketTestMenu dev sub-menu
- Refine server join pipeline: MenuSlotGrid and InitialJoinCutscene adjustments